[package]
name = "verlet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#cimvr_common = { git = "https://github.com/ChatImproVR/iteration0.git", branch = "main" }
#cimvr_engine_interface  = { git = "https://github.com/ChatImproVR/iteration0.git", branch = "main" }
cimvr_common = { path = "../chatimprovr/common/" }
cimvr_engine_interface  = { path = "../chatimprovr/engine_interface/" }
serde = { version = "1", features = ["derive"] }
zwohash = "0.1.2"
goodie-bag = { path = "../goodie-bag" }
bytemuck = "1"
